# FarmLanding

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
src/lending/: admin.py  forms.py  models.py  urls.py  views.py
src/lending/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_slug.py  0003_gallery.py  0004_alter_gallery_options.py  0005_about.py  0006_alter_product_featured.py  0007_review.py  0008_alter_review_grade.py  0009_alter_review_description.py  0010_rename_grade_review_rating.py  0011_hero.py  0012_aboutfarm_alter_hero_options.py  0013_alter_aboutfarm_options.py  0014_remove_aboutfarm_image_aboutfarm_icon_class.py  0015_contacts.py  0016_socialnetwork.py  0017_alter_socialnetwork_options.py
src/lending/service/: telegram_utils.py
src/lending/templatetags/: lending_tags.py
src/settings/: prod_settings.py  settings.py  urls.py  wsgi.py
src/static/css/: admin.css  style_gallery.css  styles.css
src/static/js/: gallery.js  script.js
src/templates/: base.html
src/templates/lending/: about.html  about_farm.html  contacts.html  gallery.html  hero.html  products.html  reviews.html  social_network.html
tests/: conftest.py  test_models.py  test_templatetags.py  test_urls.py  test_views.py
