[project]
name = "farmlanding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.2",
    "django-admin-interface>=0.30.0",
    "django-admin-list-filter-dropdown>=1.0.3",
    "django-cleanup>=9.0.0",
    "django-import-export>=4.3.7",
    "django-phonenumber-field>=8.1.0",
    "django-summernote>=0.8.20.0",
    "phonenumbers>=9.0.6",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
